# K70CORERGB

./: .gitignore  calibrate.py  calibration_result.json  keys_calibrated.py  pyproject.toml  test.py
gui/: __init__.py  app.py  color_picker.py  effects.py  keyboard_view.py  main_window.py  profiles.py
k70corergb/: __init__.py  colors.py  device.py  keyboard.py  keys.py  protocol.py
k70corergb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_color.py  test_devices.py  test_keyboard.py  test_keys.py  test_protocol.py
