[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k70corergb"
version = "0.1.0"
description = "Control Corsair K70 CORE TKL RGB lighting without iCUE"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "hidapi>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/k70corergb"
Issues = "https://github.com/yourusername/k70corergb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["k70corergb*"]